--- a/RelativeLayout/app/src/main/res/layout/activity_main.xml
+++ b/RelativeLayout/app/src/main/res/layout/activity_main.xml
@@ -6,46 +6,46 @@
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
 
-		<Button
-			android:id="@+id/button"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_alignParentStart="true"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentTop="true"
-			android:text="Top" />
+	<Button
+		android:id="@+id/button"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_alignParentStart="true"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentTop="true"
+		android:text="Top" />
 
-		<Button
-			android:id="@+id/button2"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_alignParentStart="true"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentBottom="true"
-			android:text="Bottom" />
+	<Button
+		android:id="@+id/button2"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_alignParentStart="true"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentBottom="true"
+		android:text="Bottom" />
 
-		<Button
-			android:id="@+id/button3"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_below="@id/button"
-			android:layout_alignParentStart="true"
-			android:layout_alignParentLeft="true"
-			android:text="Left Below Top" />
+	<Button
+		android:id="@+id/button3"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/button"
+		android:layout_alignParentStart="true"
+		android:layout_alignParentLeft="true"
+		android:text="Left Below Top" />
 
-		<Button
-			android:id="@+id/button4"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_above="@id/button2"
-			android:layout_alignParentEnd="true"
-			android:layout_alignParentRight="true"
-			android:text="Right Above Bottom" />
+	<Button
+		android:id="@+id/button4"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_above="@id/button2"
+		android:layout_alignParentEnd="true"
+		android:layout_alignParentRight="true"
+		android:text="Right Above Bottom" />
 
 	<RelativeLayout
 		android:layout_width="match_parent"
 		android:layout_height="280dp"
-		android:background="#FF6347"
+		android:background="#FFFFF"
 		>
 
 	</RelativeLayout>
